[Issue 6796] Execution - align numbers

--- a/tm/tm.web/src/main/webapp/styles/structure.css
+++ b/tm/tm.web/src/main/webapp/styles/structure.css
@@ -1111,6 +1111,8 @@ div#execute-header-center-div {
 
 span#execute-header-numbers-label {
 	font-size: 2.0em;
+	position: relative;
+	top: 3px;
 }
 
 div#execute-header-right-div {
